@@ -1473,6 +1473,64 @@ argument_list|)
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|getFuzzyQuery
+specifier|protected
+name|Query
+name|getFuzzyQuery
+parameter_list|(
+name|String
+name|field
+parameter_list|,
+name|String
+name|termStr
+parameter_list|,
+name|float
+name|minSimilarity
+parameter_list|)
+throws|throws
+name|ParseException
+block|{
+name|termStr
+operator|=
+name|analyzeIfMultitermTermText
+argument_list|(
+name|field
+argument_list|,
+name|termStr
+argument_list|,
+name|schema
+operator|.
+name|getFieldType
+argument_list|(
+name|field
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Term
+name|t
+init|=
+operator|new
+name|Term
+argument_list|(
+name|field
+argument_list|,
+name|termStr
+argument_list|)
+decl_stmt|;
+return|return
+name|newFuzzyQuery
+argument_list|(
+name|t
+argument_list|,
+name|minSimilarity
+argument_list|,
+name|getFuzzyPrefixLength
+argument_list|()
+argument_list|)
+return|;
+block|}
 block|}
 end_class
 
