@@ -1199,6 +1199,55 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testFuzzy
+specifier|public
+name|void
+name|testFuzzy
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"content:ZiLLx~1"
+argument_list|)
+argument_list|,
+literal|"//result[@numFound='1']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"content_straight:ZiLLx~1"
+argument_list|)
+argument_list|,
+comment|// case preserving field shouldn't match
+literal|"//result[@numFound='0']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"content_folding:ZiLLx~1"
+argument_list|)
+argument_list|,
+comment|// case preserving field shouldn't match
+literal|"//result[@numFound='0']"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testRegex
 specifier|public
 name|void
